--- a/Отчёт.md
+++ b/Отчёт.md
@@ -3,7 +3,7 @@
 ## Условие 
 Разработать программу вычисления корня кубического из заданного числа согласно быстро сходящемуся итерационному алгоритму
 определения корня n-ной степени с точностью не хуже 0,05%.
-## 7 баллов
+## 4-6 баллов
 ### Код на C
 ```c
 #include <math.h>
@@ -52,3 +52,9 @@ int main(int argc, char** argv) {
     return 0;
 }
 ```
+### Опции компиляции :
+```sh
+gcc -O0 -Wall -masm=intel -S optimized_prog.c -o optimized_prog.s
+```
+### Код на Assembler :
+
