--- a/Отчёт.md
+++ b/Отчёт.md
@@ -57,4 +57,205 @@ int main(int argc, char** argv) {
 gcc -O0 -Wall -masm=intel -S optimized_prog.c -o optimized_prog.s
 ```
 ### Код на Assembler :
-
+```assembly
+mabs:
+        push    rbp
+        mov     rbp, rsp
+        movsd   QWORD PTR [rbp-8], xmm0
+        pxor    xmm0, xmm0
+        comisd  xmm0, QWORD PTR [rbp-8]
+        jbe     .L7
+        movsd   xmm0, QWORD PTR [rbp-8]
+        movq    xmm1, QWORD PTR .LC1[rip]
+        xorpd   xmm0, xmm1
+        jmp     .L5
+.L7:
+        movsd   xmm0, QWORD PTR [rbp-8]
+.L5:
+        movq    rax, xmm0
+        movq    xmm0, rax
+        pop     rbp
+        ret
+.LC2:
+        .string "r"
+.LC3:
+        .string "%lf"
+.LC4:
+        .string "Error "
+read_from_file:
+        push    rbp
+        mov     rbp, rsp
+        sub     rsp, 32
+        mov     QWORD PTR [rbp-24], rdi
+        mov     rax, QWORD PTR [rbp-24]
+        mov     esi, OFFSET FLAT:.LC2
+        mov     rdi, rax
+        call    fopen
+        mov     QWORD PTR [rbp-8], rax
+        cmp     QWORD PTR [rbp-8], 0
+        je      .L9
+        lea     rdx, [rbp-16]
+        mov     rax, QWORD PTR [rbp-8]
+        mov     esi, OFFSET FLAT:.LC3
+        mov     rdi, rax
+        mov     eax, 0
+        call    __isoc99_fscanf
+        mov     rax, QWORD PTR [rbp-8]
+        mov     rdi, rax
+        call    fclose
+        movsd   xmm0, QWORD PTR [rbp-16]
+        movq    rax, xmm0
+        jmp     .L8
+.L9:
+        mov     edi, OFFSET FLAT:.LC4
+        call    perror
+.L8:
+        movq    xmm0, rax
+        leave
+        ret
+.LC8:
+        .string "w"
+.LC9:
+        .string "root = %lf\n"
+calculate_root:
+        push    rbp
+        mov     rbp, rsp
+        push    r15
+        push    r14
+        push    r13
+        push    r12
+        sub     rsp, 32
+        movsd   QWORD PTR [rbp-56], xmm0
+        mov     QWORD PTR [rbp-64], rdi
+        mov     r12, QWORD PTR .LC5[rip]
+        movsd   xmm0, QWORD PTR [rbp-56]
+        movsd   xmm1, QWORD PTR .LC6[rip]
+        divsd   xmm0, xmm1
+        movq    r13, xmm0
+        mov     r15, QWORD PTR [rbp-56]
+        jmp     .L12
+.L15:
+        mov     r15, QWORD PTR [rbp-56]
+        mov     r14d, 1
+        jmp     .L13
+.L14:
+        movq    xmm0, r15
+        movq    xmm1, r13
+        divsd   xmm0, xmm1
+        movq    r15, xmm0
+        mov     eax, r14d
+        add     eax, 1
+        mov     r14d, eax
+.L13:
+        mov     eax, r14d
+        cmp     eax, 2
+        jle     .L14
+        movq    xmm1, r15
+        movq    xmm0, r13
+        addsd   xmm1, xmm0
+        movsd   xmm0, QWORD PTR .LC7[rip]
+        mulsd   xmm0, xmm1
+        movq    r13, xmm0
+.L12:
+        movq    xmm0, r13
+        movq    xmm1, r15
+        subsd   xmm0, xmm1
+        movq    rax, xmm0
+        movq    xmm0, rax
+        call    mabs
+        movq    rax, xmm0
+        movq    xmm0, r12
+        movq    xmm2, rax
+        comisd  xmm2, xmm0
+        jnb     .L15
+        mov     rax, QWORD PTR [rbp-64]
+        mov     esi, OFFSET FLAT:.LC8
+        mov     rdi, rax
+        call    fopen
+        mov     QWORD PTR [rbp-40], rax
+        cmp     QWORD PTR [rbp-40], 0
+        je      .L16
+        mov     rax, r13
+        movq    xmm0, rax
+        call    round
+        movq    rax, xmm0
+        mov     r15, rax
+        mov     rax, r15
+        movsd   xmm0, QWORD PTR .LC6[rip]
+        movapd  xmm1, xmm0
+        movq    xmm0, rax
+        call    pow
+        movq    rax, xmm0
+        movq    xmm3, rax
+        ucomisd xmm3, QWORD PTR [rbp-56]
+        jp      .L17
+        movq    xmm4, rax
+        ucomisd xmm4, QWORD PTR [rbp-56]
+        jne     .L17
+        mov     rdx, r15
+        mov     rax, QWORD PTR [rbp-40]
+        movq    xmm0, rdx
+        mov     esi, OFFSET FLAT:.LC9
+        mov     rdi, rax
+        mov     eax, 1
+        call    fprintf
+        jmp     .L19
+.L17:
+        mov     rdx, r13
+        mov     rax, QWORD PTR [rbp-40]
+        movq    xmm0, rdx
+        mov     esi, OFFSET FLAT:.LC9
+        mov     rdi, rax
+        mov     eax, 1
+        call    fprintf
+        jmp     .L19
+.L16:
+        mov     edi, OFFSET FLAT:.LC4
+        call    perror
+.L19:
+        nop
+        add     rsp, 32
+        pop     r12
+        pop     r13
+        pop     r14
+        pop     r15
+        pop     rbp
+        ret
+main:
+        push    rbp
+        mov     rbp, rsp
+        sub     rsp, 32
+        mov     DWORD PTR [rbp-20], edi
+        mov     QWORD PTR [rbp-32], rsi
+        mov     rax, QWORD PTR [rbp-32]
+        add     rax, 8
+        mov     rax, QWORD PTR [rax]
+        mov     rdi, rax
+        call    read_from_file
+        movq    rax, xmm0
+        mov     QWORD PTR [rbp-8], rax
+        mov     rax, QWORD PTR [rbp-32]
+        add     rax, 16
+        mov     rdx, QWORD PTR [rax]
+        mov     rax, QWORD PTR [rbp-8]
+        mov     rdi, rdx
+        movq    xmm0, rax
+        call    calculate_root
+        mov     eax, 0
+        leave
+        ret
+.LC1:
+        .long   0
+        .long   -2147483648
+        .long   0
+        .long   0
+.LC5:
+        .long   -755914244
+        .long   1061184077
+.LC6:
+        .long   0
+        .long   1074266112
+.LC7:
+        .long   0
+        .long   1071644672
+```
