--- a/Отчёт.md
+++ b/Отчёт.md
@@ -259,3 +259,5 @@ main:
         .long   0                            #  0.5
         .long   1071644672
 ```
+### Сопоставление размеров : 
+Программа без оптимизации использования регистров занимает 185 строк кода, с оптимизацией - 212.
