--- a/Отчёт.md
+++ b/Отчёт.md
@@ -261,3 +261,22 @@ main:
 ```
 ### Сопоставление размеров : 
 Программа без оптимизации использования регистров занимает 185 строк кода, с оптимизацией - 212.
+### Тестовые прогоны : 
+
+## 7 баллов
+Код на С тот же
+
+### Линковка :
+```sh
+gcc main.s -c -o main.o
+gcc fill_from_file.s -c -o fill_from_file.o
+gcc difference.s -c -o difference.o
+gcc print_string.s -c -o print_string.o
+gcc -lc main.o fill_from_file.o difference.o print_string.o -o app.exe
+```
+### Формат командной строки:
+**Input_file_name**<пробел>**Output_file_name**
+<img width="415" alt="Снимок экрана 2022-11-13 в 23 38 45" src="https://user-images.githubusercontent.com/86932751/201543519-4c391ca0-1057-4022-9c5c-c756f7775c79.png">
+### Работа с файлами:
+<img width="796" alt="Снимок экрана 2022-11-13 в 23 50 30" src="https://user-images.githubusercontent.com/86932751/201544068-a841a5a6-4029-4ad0-b001-15c1867f1f3a.png">
+Файлы с входными данными находятся тут 
