--- a/Отчёт.md
+++ b/Отчёт.md
@@ -262,10 +262,224 @@ main:
 ### Сопоставление размеров : 
 Программа без оптимизации использования регистров занимает 185 строк кода, с оптимизацией - 212.
 ### Тестовые прогоны : 
-
+<img width="314" alt="Снимок экрана 2022-11-27 в 22 10 36" src="https://user-images.githubusercontent.com/86932751/204154991-b6c3f510-4dfe-4d4c-9849-194d5bb25173.png">
 ## 7 баллов
 Код на С тот же
-
+### Разбиение кода на Assembler на 4 единицы компиляции :
+### main.s
+```assembly
+main:
+        push    rbp
+        mov     rbp, rsp
+        sub     rsp, 32
+        mov     DWORD PTR [rbp-20], edi
+        mov     QWORD PTR [rbp-32], rsi
+        mov     rax, QWORD PTR [rbp-32]
+        add     rax, 8
+        mov     rax, QWORD PTR [rax]
+        mov     rdi, rax
+        call    read_from_file
+        movq    rax, xmm0
+        mov     QWORD PTR [rbp-8], rax
+        mov     rax, QWORD PTR [rbp-32]
+        add     rax, 16
+        mov     rdx, QWORD PTR [rax]
+        mov     rax, QWORD PTR [rbp-8]
+        mov     rdi, rdx
+        movq    xmm0, rax
+        call    calculate_root
+        mov     eax, 0
+        leave
+        ret
+```
+### mabs.s
+```assembly
+mabs:
+        push    rbp
+        mov     rbp, rsp
+        movsd   QWORD PTR [rbp-8], xmm0
+        pxor    xmm0, xmm0
+        comisd  xmm0, QWORD PTR [rbp-8]
+        jbe     .L7
+        movsd   xmm0, QWORD PTR [rbp-8]
+        movq    xmm1, QWORD PTR .LC1[rip]
+        xorpd   xmm0, xmm1
+        jmp     .L5
+.L7:
+        movsd   xmm0, QWORD PTR [rbp-8]
+.L5:
+        movq    rax, xmm0
+        movq    xmm0, rax
+        pop     rbp
+        ret
+.LC1:
+        .long   0
+        .long   -2147483648
+        .long   0
+        .long   0
+```
+### calculate_root.s
+```assembly
+.LC3:
+        .string "w"
+.LC4:
+        .string "root = %lf\n"
+.LC5:
+        .string "Error "
+calculate_root:
+        push    rbp
+        mov     rbp, rsp
+        push    r15
+        push    r14
+        push    r13
+        push    r12
+        sub     rsp, 32
+        movsd   QWORD PTR [rbp-56], xmm0
+        mov     QWORD PTR [rbp-64], rdi
+        mov     r12, QWORD PTR .LC0[rip]
+        movsd   xmm0, QWORD PTR [rbp-56]
+        movsd   xmm1, QWORD PTR .LC1[rip]
+        divsd   xmm0, xmm1
+        movq    r13, xmm0
+        mov     r15, QWORD PTR [rbp-56]
+        jmp     .L2
+.L5:
+        mov     r15, QWORD PTR [rbp-56]
+        mov     r14d, 1
+        jmp     .L3
+.L4:
+        movq    xmm0, r15
+        movq    xmm1, r13
+        divsd   xmm0, xmm1
+        movq    r15, xmm0
+        mov     eax, r14d
+        add     eax, 1
+        mov     r14d, eax
+.L3:
+        mov     eax, r14d
+        cmp     eax, 2
+        jle     .L4
+        movq    xmm1, r15
+        movq    xmm0, r13
+        addsd   xmm1, xmm0
+        movsd   xmm0, QWORD PTR .LC2[rip]
+        mulsd   xmm0, xmm1
+        movq    r13, xmm0
+.L2:
+        movq    xmm0, r13
+        movq    xmm1, r15
+        subsd   xmm0, xmm1
+        movq    rax, xmm0
+        movq    xmm0, rax
+        call    mabs
+        movq    rax, xmm0
+        movq    xmm0, r12
+        movq    xmm2, rax
+        comisd  xmm2, xmm0
+        jnb     .L5
+        mov     rax, QWORD PTR [rbp-64]
+        mov     esi, OFFSET FLAT:.LC3
+        mov     rdi, rax
+        call    fopen
+        mov     QWORD PTR [rbp-40], rax
+        cmp     QWORD PTR [rbp-40], 0
+        je      .L6
+        mov     rax, r13
+        movq    xmm0, rax
+        call    round
+        movq    rax, xmm0
+        mov     r15, rax
+        mov     rax, r15
+        movsd   xmm0, QWORD PTR .LC1[rip]
+        movapd  xmm1, xmm0
+        movq    xmm0, rax
+        call    pow
+        movq    rax, xmm0
+        movq    xmm3, rax
+        ucomisd xmm3, QWORD PTR [rbp-56]
+        jp      .L7
+        movq    xmm4, rax
+        ucomisd xmm4, QWORD PTR [rbp-56]
+        jne     .L7
+        mov     rdx, r15
+        mov     rax, QWORD PTR [rbp-40]
+        movq    xmm0, rdx
+        mov     esi, OFFSET FLAT:.LC4
+        mov     rdi, rax
+        mov     eax, 1
+        call    fprintf
+        jmp     .L9
+.L7:
+        mov     rdx, r13
+        mov     rax, QWORD PTR [rbp-40]
+        movq    xmm0, rdx
+        mov     esi, OFFSET FLAT:.LC4
+        mov     rdi, rax
+        mov     eax, 1
+        call    fprintf
+        jmp     .L9
+.L6:
+        mov     edi, OFFSET FLAT:.LC5
+        call    perror
+.L9:
+        nop
+        add     rsp, 32
+        pop     r12
+        pop     r13
+        pop     r14
+        pop     r15
+        pop     rbp
+        ret
+.LC0:
+        .long   -755914244
+        .long   1061184077
+.LC1:
+        .long   0
+        .long   1074266112
+.LC2:
+        .long   0
+        .long   1071644672
+```
+### read_from_file.s
+```assembly
+.LC0:
+        .string "r"
+.LC1:
+        .string "%lf"
+.LC2:
+        .string "Error "
+read_from_file:
+        push    rbp
+        mov     rbp, rsp
+        sub     rsp, 32
+        mov     QWORD PTR [rbp-24], rdi
+        mov     rax, QWORD PTR [rbp-24]
+        mov     esi, OFFSET FLAT:.LC0
+        mov     rdi, rax
+        call    fopen
+        mov     QWORD PTR [rbp-8], rax
+        cmp     QWORD PTR [rbp-8], 0
+        je      .L2
+        lea     rdx, [rbp-16]
+        mov     rax, QWORD PTR [rbp-8]
+        mov     esi, OFFSET FLAT:.LC1
+        mov     rdi, rax
+        mov     eax, 0
+        call    __isoc99_fscanf
+        mov     rax, QWORD PTR [rbp-8]
+        mov     rdi, rax
+        call    fclose
+        movsd   xmm0, QWORD PTR [rbp-16]
+        movq    rax, xmm0
+        jmp     .L1
+.L2:
+        mov     edi, OFFSET FLAT:.LC2
+        call    perror
+.L1:
+        movq    xmm0, rax
+        leave
+        ret
+```
 ### Линковка :
 ```sh
 gcc main.s -c -o main.o
@@ -278,5 +492,5 @@ gcc -lc main.o fill_from_file.o difference.o print_string.o -o app.exe
 **Input_file_name**<пробел>**Output_file_name**
 <img width="415" alt="Снимок экрана 2022-11-13 в 23 38 45" src="https://user-images.githubusercontent.com/86932751/201543519-4c391ca0-1057-4022-9c5c-c756f7775c79.png">
 ### Работа с файлами:
-<img width="796" alt="Снимок экрана 2022-11-13 в 23 50 30" src="https://user-images.githubusercontent.com/86932751/201544068-a841a5a6-4029-4ad0-b001-15c1867f1f3a.png">
+<img width="314" alt="Снимок экрана 2022-11-27 в 22 10 36" src="https://user-images.githubusercontent.com/86932751/204154983-d786cfd7-bbb1-43b3-ba15-f2649a4bfebe.png">
 Файлы с входными данными находятся тут 
