--- a/Отчёт.md
+++ b/Отчёт.md
@@ -499,4 +499,4 @@ gcc -lc main.o fill_from_file.o difference.o print_string.o -o app.exe
 <img width="415" alt="Снимок экрана 2022-11-13 в 23 38 45" src="https://user-images.githubusercontent.com/86932751/201543519-4c391ca0-1057-4022-9c5c-c756f7775c79.png">
 ### Работа с файлами:
 <img width="314" alt="Снимок экрана 2022-11-27 в 22 10 36" src="https://user-images.githubusercontent.com/86932751/204154983-d786cfd7-bbb1-43b3-ba15-f2649a4bfebe.png">
-Файлы с входными данными находятся тут 
+Файлы с входными данными находятся тут https://github.com/evelyn-lab/CSA_HW3/tree/main/%D0%B4%D0%BB%D1%8F%207
