--- a/Отчёт.md
+++ b/Отчёт.md
@@ -260,7 +260,8 @@ main:
         .long   1071644672
 ```
 ### Сопоставление размеров : 
-Программа без оптимизации использования регистров занимает 185 строк кода, с оптимизацией - 212.
+Объектный файл после компиляции программы на Си весит 5064 байта, на 168 байт меньше объектного файла после компиляции программы на ассемблере 
+Бинарный файл после компиляции программы на Си весит 16656 байт, на 40 байт больше бинарного файла после компиляции программы на ассемблере
 ### Тестовые прогоны : 
 <img width="314" alt="Снимок экрана 2022-11-27 в 22 10 36" src="https://user-images.githubusercontent.com/86932751/204154991-b6c3f510-4dfe-4d4c-9849-194d5bb25173.png">
 
