--- a/Отчёт.md
+++ b/Отчёт.md
@@ -490,10 +490,10 @@ read_from_file:
 ### Линковка :
 ```sh
 gcc main.s -c -o main.o
-gcc fill_from_file.s -c -o fill_from_file.o
-gcc difference.s -c -o difference.o
-gcc print_string.s -c -o print_string.o
-gcc -lc main.o fill_from_file.o difference.o print_string.o -o app.exe
+gcc mabs.s -c -o mabs.o
+gcc calculate_root.s -c -o calculate_root.o
+gcc read_from_file.s -c -o read_from_file.o
+gcc -lc main.o read_from_file.o mabs.o calculate_root.o -o app.exe
 ```
 ### Формат командной строки:
 **Input_file_name**<пробел>**Output_file_name**
